Framework WIP: - Rename EgwApp to EgwFrameworkApp to avoid confusion with api/js/jsapi/EgwApp - Continued work on narrow screen styles

--- a/kdots/assets/styles/framework.less
+++ b/kdots/assets/styles/framework.less
@@ -73,6 +73,7 @@ egw-app {
   &::part(name) {
 	display: flex;
 	align-items: center;
+	text-wrap: nowrap;
   }
 }
 
